--- a/segundo.html
+++ b/segundo.html
@@ -1,6 +1,6 @@
 <!doctype html>
 
-<htm>
+<html>
 <head>
 <title>Título da página</title>
 <meta charset="utf-8" />
@@ -9,6 +9,7 @@
 <body>
 
 <body>
-Minha primeira pagina HTML
+  <h1>Minha primeira pagina HTML</h1>
+  <p>Este é apenas um parágrafo da minha <em>primeira</em> página HTML.<br /> E esta é a <strong>segunda</strong> linha do parágrafo</p>
 </body>
 </html>
